	   	GET/SET_GRAPHICS_FUNCTION (GXoR, GXand, etc). 
           - Disabled by default the focus in the X11 graphics windows as IDL does and 
	   	repositioned WINDOWS by default to top-right of screen. Screen size and behaviour
                using GDL_GR_X_WIDTH, GDL_GR_Y_WIDTH and GDL_GR_X_QSCREEN environment variables (X window)
                (GDL_GR_WIN_WIDTH, GDL_GR_WIN_WIDTH and GDL_GR_WIN_QSCREEN under windows)
           - WSHOW works irregularly, depending on the window manager.


0.9.5:
           - lot of improvments in Widgets related code. Available widgets:
	     WIDGET_DRAW(!), WIDGET_BASE, WIDGET_BUTTON, 
             WIDGET_DROPLIST, WIDGET_COMBOBOX, WIDGET_LIST, 
             WIDGET_SLIDER, WIDGET_TAB, WIDGET_TEXT, 
             WIDGET_LABEL, CW_BGROUP
	     (Note: Not all keywords are supported yet (however, they are accepted) but almost all functional keywords.
	     This means: Programs using these widgets should work but maybe look a bit different)
	     Controlling routines:
	     WIDGET_EVENT, WIDGET_CONTROL, XMANAGER
           - TIC and TOC
           - !CONST system variable
           - initial import of NetCDF-4 related codes:
             NCDF_GROUPSINQ, NCDF_GROUPNAME, NCDF_GROUPDEF, NCDF_FULLGROUPNAME,
             NCDF_GROUPPARENT, NCDF_DIMIDSINQ, NCDF_NCIDINQ, NCDF_VARIDSINQ
           - introducing the NULL device type, better result on Unix like system without X11 
             (e. g. computing nodes on HPC)
	   - better free format for print, preserving precision digits.
	   - ISA() and TYPENAME()

0.9.6:
	   - support for projections now complete. See MAP_INSTALL for details.
	   - new keywords (BOOLEAN,INTEGER,FLOAT,COMPLEX,STRING) in ISA()
	   - two new system variables: !TRUE and !FALSE
	   - initial import for SCOPE_TRACEBACK() (/sys and /struct not ready)
           - combination of input arrays in math. special functions now ok with IDL
           - SVSOL(); RESOLVE_ALL, more keywords in RESOLVE_ROUTINE