@@ -1,0 +1,35 @@
+/***************************************************************************
+                          least_squares.hpp - GDL library function
+                             -------------------
+    begin                : July 2015
+    copyright            : (C) 2015 by NATCHKEBIA Ilia
+    email                : alaingdl@users.sourceforge.net
+ ***************************************************************************/
+
+/***************************************************************************
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ ***************************************************************************/
+
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
+// this code needs Eigen3
+
+#include "datatypes.hpp"
+#include "envt.hpp"
+
+namespace lib {
+
+  BaseGDL* la_least_squares_fun( EnvT* e);
+
+} // namespace
+
+//#endif
+
+
